# CMakeDemo

app/: CMakeLists.txt  build.gradle  remark.txt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: blur.c
app/src/main/java/zc/com/cmakedemo/: BlurProcess.java  MainActivity.java  NativeBlurProcess.java  StackBlurManager.java
